# nao-remind-me

./: .gitignore  CMakeLists.txt  README.md
agenda-manager/: Agenda.cpp
agenda-server/: Agenda.cpp  Agenda.hpp  agenda-server.cpp  agenda-server.hpp  main.cpp  microsvc_controller.cpp  microsvc_controller.hpp
agenda-server/foundation/include/: basic_controller.hpp  controller.hpp  runtime_utils.hpp  std_micro_service.hpp  usr_interrupt_handler.hpp
agenda-server/foundation/src/: basic_controller.cpp  network_utils.cpp  network_utils.hpp
libs/: .gitignore  build_dependencies.sh
nao-reminder/: manifest.xml  nao-reminder.pml
nao-reminder/behavior_1/: behavior.xar
rpi-auto-enable-monitor/: accensione.py  run.sh
